Fixed z-index which was applied to code preview

--- a/sass/modules/ModReference/partials/_template.scss
+++ b/sass/modules/ModReference/partials/_template.scss
@@ -467,7 +467,7 @@ body {
     font-size: 14px;
     counter-reset: codeLine;
     position: relative;
-    z-index: 50;
+    z-index: 10;
 
     .code-line {
       counter-increment: codeLine;
